@startuml Integration-Test-Pairs

!define PAIR1_COLOR #E8F5E9
!define PAIR2_COLOR #E3F2FD
!define PAIR3_COLOR #FFF3E0

title Integration Test Pairs\nPair-wise Integration Strategy

rectangle "PAIR 1: Game Orchestration" PAIR1_COLOR {
  class GameManager {
    + loop()
    + getBoardManager()
    + getPieceManager()
  }

  class BoardManager {
    + onUpdate()
    + onRender()
    + getBoard()
  }

  class PieceManager {
    + onUpdate()
    + onRender()
    + changeTurn()
  }

  GameManager --> BoardManager : manages
  GameManager --> PieceManager : manages
}

rectangle "PAIR 2: Piece Movement Logic" PAIR2_COLOR {
  class PieceManager2 as "PieceManager" {
    + hasAlly()
    + hasEnemy()
    + getKingByColor()
  }

  abstract class Piece {
    + calculatePossibleMoves()
    + legalMoveControl()
  }

  class BoardManager2 as "BoardManager" {
    + getTileCountToEdge()
    + isValidTileNum()
  }

  PieceManager2 --> Piece : manages
  Piece --> BoardManager2 : queries
  Piece --> PieceManager2 : queries
}

rectangle "PAIR 3: Rendering Pipeline" PAIR3_COLOR {
  class BoardManager3 as "BoardManager" {
    + onRender()
  }

  class PieceManager3 as "PieceManager" {
    + onRender()
  }

  class Renderer {
    + texturedDraw()
  }

  BoardManager3 ..> Renderer : renders with
  PieceManager3 ..> Renderer : renders with
}

note bottom
  Each pair represents integration
  tests between 2-3 classes
  with Mockito mocks
end note

@enduml
